--- a/LVTN/app/src/main/res/values/strings.xml
+++ b/LVTN/app/src/main/res/values/strings.xml
@@ -9,4 +9,23 @@
     <string name="btnTakePicture">Capture Image</string>
     <string name="btnRecordVideo">Record Video</string>
     <string name="btnUploadToServer">Upload to Server</string>
+
+    <string name="gps_prompt_title">GPS Setting</string>
+    <string name="gps_prompt_message">GPS is not enabled. Do you want to go setting menu?</string>
+    <string name="gps_prompt_accept_button">Setting</string>
+    <string name="gps_prompt_decline_button">Cancel</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
